--- a/style.css
+++ b/style.css
@@ -1,31 +1,31 @@
 body {
-    background: linear-gradient(120deg, #A5B4FC, #6EE7B7);
-    background-repeat:no-repeat;
-    background-attachment: fixed;
-    font-family: 'segoe UI', sans-serif;
-    margin: 0;
-    padding: 0;
+  background: linear-gradient(120deg, #a5b4fc, #6ee7b7);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-family: "segoe UI", sans-serif;
+  margin: 0;
+  padding: 0;
 }
-.navbar{
-    font-size: 50px;
-    margin:30px;
-    padding: 20px;
-    position: relative;
-    font-family: 'bebas neue', sans-serif;
-    color: black;
+.navbar {
+  font-size: 50px;
+  margin: 30px;
+  padding: 20px;
+  position: relative;
+  font-family: "bebas neue", sans-serif;
+  color: black;
 }
-.navbar:hover{
-    color: white;
-    text-shadow:0 4px 12px  black;
+.navbar:hover {
+  color: white;
+  text-shadow: 0 4px 12px black;
 }
 .container {
-  display:flex;
-  align-items:center;        
+  display: flex;
+  align-items: center;
 }
 .side-image {
-  width: 400px;   
-  height: 400px;  
-  border-radius: 8px; 
+  width: 400px;
+  height: 400px;
+  border-radius: 8px;
   margin-left: 100px;
   margin-right: 200px;
   border: 1px solid black;
@@ -37,9 +37,9 @@ body {
 .text-content {
   font-size: 30px;
   margin-left: 30px;
-  font-family: 'segoe UI', sans-serif;
+  font-family: "segoe UI", sans-serif;
 }
-.text-content:hover{
+.text-content:hover {
   text-shadow: 0 4px 12px white;
 }
 #about {
@@ -49,10 +49,10 @@ body {
   background: #fff8f0;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  text-align: center; 
+  text-align: center;
 }
 #about:hover {
-  box-shadow: 0 6px 16px lightcoral ;
+  box-shadow: 0 6px 16px lightcoral;
 }
 #about h2 {
   font-size: 28px;
@@ -62,7 +62,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   max-width: 700px;
-  margin: auto; 
+  margin: auto;
 }
 .social-links {
   margin-top: 20px;
@@ -70,7 +70,7 @@ body {
 .social-links a {
   margin: 0 10px;
   display: inline-block;
-  transition: transform ;
+  transition: transform;
 }
 .social-links a:hover {
   transform: scale(1.2);
@@ -83,14 +83,13 @@ body {
 .next-button button {
   padding: 20px 40px;
   font-size: 20px;
-  background: linear-gradient(120deg, #538bbf, #A5B4FC);
+  background: linear-gradient(120deg, #538bbf, #a5b4fc);
   border: none;
   border-radius: 8px;
   color: white;
   cursor: pointer;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
 .next-button button:hover {
   transform: scale(1.05);
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
